force-app/main/default/objects/Case_Highlight_Panel_Button__mdt/Case_Highlight_Panel_Button__mdt.object-meta.xml
<CustomObject>
    <label>Case Highlight panel Button</label>
    <pluralLabel>Case Highlight panel Buttons</pluralLabel>
</CustomObject>