force-app/main/default/objects/Case_Highlight_Panel_Button__mdt/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>