force-app/main/default/objects/Case_Highlight_Panel_Button__mdt/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <label>Case Sub-Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>