force-app/main/default/objects/Case_Highlight_Panel_Button__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>