force-app/main/default/objects/Case_Highlight_Panel_Button__mdt/fields/isCPQ_Active_User__c.field-meta.xml
<CustomField>
    <fullName>isCPQ_Active_User__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check for CPQ and Non - CPQ users</description>
    <label>isCPQ Active User</label>
    <type>Checkbox</type>
</CustomField>