force-app/main/default/objects/Case_Highlight_Panel_Button__mdt/fields/isUpdateAssetActiveUser__c.field-meta.xml
<CustomField>
    <fullName>isUpdateAssetActiveUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check if the user has update asset active flag</description>
    <label>isUpdateAssetActiveUser</label>
    <type>Checkbox</type>
</CustomField>