force-app/main/default/objects/Case_Highlight_Panel_Button__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>